# llmkit

./: .crib  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/llmkit/: __init__.py
src/llmkit/bridge/: __init__.py  __main__.py  bridge.py  cli.py  client.py  config.py  sinks.py  stream.py
src/llmkit/bridge/adapters/: __init__.py  anthropic.py  claude_code.py  google.py  openai.py
src/llmkit/md/: __init__.py
src/llmkit/md/render/: __init__.py  __main__.py  cli.py  stream.py
src/llmkit/md/view/: __init__.py  __main__.py  app.py  cli.py
