# Distribution name is `polyllmkit` (the bare `llmkit` PyPI slot is free, but the
# name is generic/crowded — 63+ GitHub repos share it — so we publish under a
# distinct slug). The IMPORT name stays `llmkit` (see [tool.uv.build-backend]
# module-name below): consumers keep `import llmkit`, `pip install polyllmkit`.
[project]
name = "polyllmkit"
version = "0.1.1"
description = "Streaming, multi-provider LLM bridge + markdown rendering toolkit for terminal apps."
requires-python = ">=3.11"  # tomllib (bridge.config) is stdlib only from 3.11
# Base install pulls nothing — pick the subpackage(s) you need via extras.
# This keeps the two subpackages' dependency graphs disjoint: `md` never
# drags in openai, `bridge` never drags in rich/textual.
dependencies = []

[project.optional-dependencies]
# llmkit.bridge — OpenAI-compatible streaming chat/complete bridge.
bridge = ["openai>=1.0"]
# Optional native-protocol adapters. Each is imported lazily so the default
# openai-compatible path never needs them. Point a provider's endpoint at a
# gateway (e.g. OpenCode Zen) to route the native protocol through it.
claude = ["claude-agent-sdk>=0.2"]  # claude_code adapter (Claude Agent SDK)
anthropic = ["anthropic>=0.40"]  # anthropic adapter (native Messages API)
google = ["google-genai>=1.0"]  # google adapter (native Gemini API)
# Every backend at once — for hosts that resolve the adapter at runtime and
# must have all of them present (e.g. cribsheet's daemon).
all = [
    "openai>=1.0",
    "claude-agent-sdk>=0.2",
    "anthropic>=0.40",
    "google-genai>=1.0",
]
# llmkit.md — markdown rendering (one-shot + live stream + scrollable modal).
# markdown-it-py is a direct import in md.render.stream (textual also pulls
# it, but we depend on it explicitly since we use it ourselves).
md = ["rich>=13.0", "textual>=0.50", "markdown-it-py>=3.0"]

[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
# Import name != distribution name (like scikit-learn -> sklearn): dist is
# `polyllmkit`, but the package imports as `llmkit`. Keep this `llmkit`.
module-name = "llmkit"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]
